--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@popperjs/core": "^2.11.6",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
-    "vue": "^3.2.47",
+    "jquery": "^3.7.0",
+    "vue": "^3.3.4",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
